# oz_02_main-004-BE

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml  django-log.yml  nginx-log.yml
django/: Dockerfile  config.ini  entrypoint.sh  secret.json
django/common/: models.py
django/common/management/commands/: create_superusers.py
django/config/: asgi.py  settings.py  urls.py  wsgi.py
django/guestbook/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django/guestbook/urls/: deploy.py  testForLocal.py
django/guestbook/views/: deploy.py  testForLocal.py
django/pets/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
django/pets/migrations/: 0001_initial.py
django/pets/urls/: deploy.py  testForLocal.py
django/pets/views/: deploy.py  testForLocal.py
django/posts/: admin.py  models.py  serializer.py  urls.py  utils.py  views.py
django/recommendation/: apps.py  models.py  recommendation.py  urls.py  views.py
django/recommendation/management/commands/: script.py
django/recommendation/templates/recommendation/: recommended_todos.html
django/users/: admin.py  apps.py  kakao.py  models.py  serializers.py  urls.py  userviews.py  utils.py  views.py
django/users/migrations/: 0001_initial.py
