[tool.poetry]
name = "20240527-001"
version = "0.1.0"
description = ""
authors = ["bamjun <khy5116@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
django-allauth = "0.61.1"
django-cors-headers = "4.3.1"
djangorestframework-simplejwt = "5.3.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
spotipy = "^2.24.0"
drf-yasg = "^1.21.0"
setuptools = "^70.0.0"
importlib-metadata = "^7.1.0"
pillow = "^10.3.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
faker = "^25.8.0"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
